--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Profile.EditProfileActivity"
     android:background="@color/background"
-    android:padding="20dp">
+    android:paddingVertical="20dp">
 
     <ImageButton
         android:id="@+id/btnGoBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:layout_marginStart="20dp"
         android:src="@drawable/back_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
+        android:layout_marginEnd="20dp"
         android:src="@drawable/tick_white"
         app:layout_constraintBottom_toBottomOf="@+id/btnGoBack"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +48,7 @@
         android:layout_marginTop="10dp"
         android:outlineSpotShadowColor="@color/white"
         android:scrollbars="none"
+        android:paddingHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
