Приведение к нижнему регистру при введении ника

--- a/app/src/main/res/layout/activity_edit_party.xml
+++ b/app/src/main/res/layout/activity_edit_party.xml
@@ -199,6 +199,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 app:endIconMode="custom"
+                app:boxBackgroundMode="outline"
                 app:endIconDrawable="@drawable/calendar"
                 app:endIconTint="@color/hint_color"
                 app:endIconCheckable="true"
@@ -229,6 +230,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 app:endIconMode="custom"
+                app:boxBackgroundMode="outline"
                 app:helperTextTextColor="@color/main_color"
                 app:endIconDrawable="@drawable/watch"
                 app:endIconTint="@color/hint_color"
