Создан экран вывода неподтвержденных вечеринок в панели администратора с возможностью их подтверждения, но не блокировки

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -65,6 +65,7 @@
         android:layout_height="0dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginTop="5dp"
+        tools:listitem="@layout/item_party"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,11 +79,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:text="Вечеринок пока нет,\nвозвращайтесь позже"
         android:textColor="@color/secondary_text_color"
         android:visibility="invisible"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/recycler" />
