--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,6 +19,7 @@
         <item name="android:statusBarColor">@color/background_splash_screen</item>
         <item name="android:navigationBarColor">@color/background_splash_screen</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="colorAccent">@color/main_color</item>
     </style>
 
     <style name="bottom_navigation">
