--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="android:windowBackground">@drawable/background_splashscreen</item>
         <item name="android:statusBarColor">@color/background_splash_screen</item>
         <item name="android:navigationBarColor">@color/background_splash_screen</item>
+        <item name="colorAccent">@color/main_color</item>
     </style>
 
     <style name="Activity" parent="Theme.AppCompat.Light.NoActionBar">
