Если пользователь на проверке то нет возможности добавлять ему вечеринку

--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -68,8 +68,9 @@
                 style="@style/edit_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:text="dadsad"
                 android:background="@drawable/edit_text_selector"
-                android:inputType="textEmailAddress"
+                android:inputType="textCapWords"
                 android:lines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
