--- a/app/src/main/res/layout/dialog_item.xml
+++ b/app/src/main/res/layout/dialog_item.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/title"
             style="@style/text_bold_16_style"
             android:textSize="18dp"
             android:layout_width="wrap_content"
@@ -34,8 +34,8 @@
             android:layout_marginTop="5dp"
             android:text="Причина: "
             android:textColor="@color/secondary_text_color"
-            app:layout_constraintStart_toStartOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintStart_toStartOf="@+id/title"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
 
         <Button
             android:id="@+id/btnOk"
