Создан фрагмент для Пользователей

--- a/app/src/main/res/layout/fragment_admin_users.xml
+++ b/app/src/main/res/layout/fragment_admin_users.xml
@@ -3,12 +3,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.AdminUsersFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Admin.AdminActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
+        tools:listitem="@layout/item_users"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:spanCount="2" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/text_medium_16_style"
+        android:textColor="@color/secondary_text_color"
+        android:text="Все вечеринки проверены"
+        android:visibility="invisible"
+        android:layout_gravity="center"/>
 </FrameLayout>
